force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__CategoryHierarchy__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CategoryHierarchy__c</fullName>
    <description>The category hierarchy associated with the child product</description>
    <inlineHelpText>The category hierarchy associated with the child product</inlineHelpText>
    <label>Category Hierarchy</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>