force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ChildLevel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChildLevel__c</fullName>
    <description>The child product or category level</description>
    <label>Child Level</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>