force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ChildName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChildName__c</fullName>
    <description>The child category name</description>
    <formula>Apttus_Config2__ChildClassificationId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Name</label>
    <type>Text</type>
</CustomField>