force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ChildProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChildProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the child product</description>
    <label>Child Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Hierarchy View</relationshipLabel>
    <relationshipName>ProductHierarchyView</relationshipName>
    <type>Lookup</type>
</CustomField>