force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ChildRight__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChildRight__c</fullName>
    <description>The child right visitation sequence</description>
    <label>Child Right</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>