force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__IsDetail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsDetail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the node in the hierarchy is a detail node.</description>
    <label>Is Detail</label>
    <type>Checkbox</type>
</CustomField>