force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ParentClassificationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentClassificationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the parent category</description>
    <label>Parent Category</label>
    <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
    <relationshipLabel>Hierarchy View (Parent)</relationshipLabel>
    <relationshipName>HierarchyView</relationshipName>
    <type>Lookup</type>
</CustomField>