force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ParentName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ParentName__c</fullName>
    <description>The parent category name</description>
    <formula>Apttus_Config2__ParentClassificationId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Name</label>
    <type>Text</type>
</CustomField>