force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ProductClassificationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductClassificationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated product classification ID.</description>
    <inlineHelpText>The associated product classification ID.</inlineHelpText>
    <label>Product Classification</label>
    <referenceTo>Apttus_Config2__ProductClassification__c</referenceTo>
    <relationshipLabel>Product Hierarchy View</relationshipLabel>
    <relationshipName>ProductHierarchyView</relationshipName>
    <type>Lookup</type>
</CustomField>