force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ProductCode__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCode__c</fullName>
    <description>The product code</description>
    <formula>Apttus_Config2__ChildProductId__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>