force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ProductConfigurationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductConfigurationType__c</fullName>
    <description>The product configuration type</description>
    <formula>TEXT( Apttus_Config2__ChildProductId__r.Apttus_Config2__ConfigurationType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Configuration Type</label>
    <type>Text</type>
</CustomField>