force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__ProductEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductEffectiveDate__c</fullName>
    <description>The product effective date. The product becomes available for selection on this date and time</description>
    <formula>Apttus_Config2__ChildProductId__r.Apttus_Config2__EffectiveDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Effective Date</label>
    <type>DateTime</type>
</CustomField>