force-app/main/default/objects/Apttus_Config2__ProductHierarchyView__c/fields/Apttus_Config2__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Sequence__c</fullName>
    <formula>Apttus_Config2__ProductClassificationId__r.Apttus_Config2__Sequence__c</formula>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>